Added icon font for slider arrows

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet" />
     <link rel="stylesheet" href="../css/reset.css" />
     <link rel="stylesheet" href="../css/typography.css" />
+    <link rel="stylesheet" href="../css/icon-font.css" />
     <link rel="stylesheet" href="../css/style.css" />
     <title>Web Splash Screens</title>
   </head>
@@ -90,16 +91,10 @@
               <span class="aside__bottom-text">Finally, all your work in one peace</span>
             </div>
             <div class="aside__slider-container">
-              <button class="aside__slider-left-button aside__slider-button">
-                <div class="icon-container">
-                  <img src="../icons/arrow-left.svg" alt="arrow-left" />
-                </div>
-              </button>
-              <button class="aside__slider-right-button aside__slider-button">
-                <div class="icon-container">
-                  <img src="../icons/arrow-right.svg" alt="arrow-right" />
-                </div>
-              </button>
+              <button
+                class="aside__slider-left-button aside__slider-button aside__slider-button_disabled icon--arrow-left"></button>
+              <button
+                class="aside__slider-right-button aside__slider-button icon--arrow-right"></button>
             </div>
           </div>
         </aside>
