Added rem controller and basic adaptive

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/typography.css" />
     <link rel="stylesheet" href="../css/icon-font.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/media/index-lg.css" media="(max-width: 992px)" />
     <title>Web Splash Screens</title>
   </head>
   <body>
@@ -23,6 +24,10 @@
             <h1 class="main__h1 h1">Create account</h1>
           </div>
           <div class="registration-container">
+            <div class="rem-control-container">
+              <button class="rem-control-container__button-increase">Aa+</button>
+              <button class="rem-control-container__button-decrease">Aa-</button>
+            </div>
             <div class="upper-label-container">
               <span class="upper-label-container__upper-label"
                 >Let's get started with your 30 days trial</span
@@ -100,5 +105,6 @@
         </aside>
       </div>
     </div>
+    <script src="../js/script.js"></script>
   </body>
 </html>
