Complete markup & styles

--- a/html/password-reset.html
+++ b/html/password-reset.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/typography.css" />
     <link rel="stylesheet" href="../css/icon-font.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/password-reset.css" />
     <link rel="stylesheet" href="../css/media/index-lg.css" media="(max-width: 992px)" />
     <title>Web Splash Screens</title>
   </head>
@@ -21,7 +22,7 @@
       <div class="main-container">
         <main class="main">
           <div class="main__h1-container">
-            <h1 class="main__h1 h1">Create account</h1>
+            <h1 class="main__h1 h1">Password reset</h1>
           </div>
           <div class="form-container">
             <div class="rem-control-container">
@@ -30,50 +31,28 @@
             </div>
             <div class="upper-label-container">
               <span class="upper-label-container__label"
-                >Let's get started with your 30 days trial</span
+                >We sent the code to <span class="text-email">name@example.com</span></span
               >
             </div>
             <form action="" class="form">
               <div class="input-container">
-                <input type="text" class="input-container__input" placeholder="Name" />
-              </div>
-              <div class="input-container">
-                <input type="text" class="input-container__input" placeholder="Email" />
-              </div>
-              <div class="input-container">
-                <input type="text" class="input-container__input" placeholder="Password" />
+                <input type="text" class="input-container__input" placeholder="Code" />
               </div>
               <div class="input-container">
                 <input
                   type="submit"
                   class="input-container__input input-container__input_black"
-                  value="Create account" />
+                  value="Reset password" />
               </div>
             </form>
             <div class="lower-label-container">
               <span class="lower-label-container__label"
-                >Already have an account? <a href="welcome-back.html">Log in</a></span
+                >Didn't receive the email? <a href="#">Click to resend</a></span
               >
-            </div>
-            <div class="input-container">
-              <button class="input-container__button input-container__button_black">
-                <div class="icon-container">
-                  <img src="../icons/apple.svg" alt="apple-corp" />
-                </div>
-                <span>Sign up with Apple</span>
-              </button>
-            </div>
-            <div class="input-container">
-              <button class="input-container__button">
-                <div class="icon-container">
-                  <img src="../icons/google.svg" alt="google-corp" />
-                </div>
-                <span>Sign up with Google</span>
-              </button>
             </div>
           </div>
           <div class="footer-container">
-            <!-- <span class="text">← BACK</span> -->
+            <span class="text icon--arrow-no-circle"><a href="welcome-back.html">Back</a></span>
           </div>
         </main>
       </div>
