--- a/html/welcome-back.html
+++ b/html/welcome-back.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../css/typography.css" />
     <link rel="stylesheet" href="../css/icon-font.css" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/welcome-back.css" />
     <link rel="stylesheet" href="../css/media/index-lg.css" media="(max-width: 992px)" />
     <title>Web Splash Screens</title>
   </head>
@@ -21,7 +22,7 @@
       <div class="main-container">
         <main class="main">
           <div class="main__h1-container">
-            <h1 class="main__h1 h1">Create account</h1>
+            <h1 class="main__h1 h1">Welcome back</h1>
           </div>
           <div class="form-container">
             <div class="rem-control-container">
@@ -35,24 +36,26 @@
             </div>
             <form action="" class="form">
               <div class="input-container">
-                <input type="text" class="input-container__input" placeholder="Name" />
-              </div>
-              <div class="input-container">
                 <input type="text" class="input-container__input" placeholder="Email" />
               </div>
               <div class="input-container">
                 <input type="text" class="input-container__input" placeholder="Password" />
               </div>
+              <div class="inner-label-container">
+                <span class="inner-label-container__label"
+                  ><a href="forgot-password.html">Forgot password?</a></span
+                >
+              </div>
               <div class="input-container">
                 <input
                   type="submit"
                   class="input-container__input input-container__input_black"
-                  value="Create account" />
+                  value="Log in" />
               </div>
             </form>
             <div class="lower-label-container">
               <span class="lower-label-container__label"
-                >Already have an account? <a href="welcome-back.html">Log in</a></span
+                >Don't have an account? <a href="index.html">Sign up</a></span
               >
             </div>
             <div class="input-container">
@@ -60,7 +63,7 @@
                 <div class="icon-container">
                   <img src="../icons/apple.svg" alt="apple-corp" />
                 </div>
-                <span>Sign up with Apple</span>
+                <span>Log in with Apple</span>
               </button>
             </div>
             <div class="input-container">
@@ -68,7 +71,7 @@
                 <div class="icon-container">
                   <img src="../icons/google.svg" alt="google-corp" />
                 </div>
-                <span>Sign up with Google</span>
+                <span>Log in with Google</span>
               </button>
             </div>
           </div>
